fixed select appearance for dark mode

--- a/src/component/general/form/select/select.scss
+++ b/src/component/general/form/select/select.scss
@@ -9,7 +9,11 @@
     width: 100%;
     background-color: rgba(var(--lotta-primary-color), 0.1);
     outline: transparent solid 1px;
+    -webkit-appearance: none;
     &:focus-visible {
         outline: rgba(var(--lotta-primary-color), 1) solid 1px;
     }
+    @media (prefers-color-scheme: dark) { optgroup  {
+        color: rgba(var(--lotta-contrast-text-color), 1);
+    }}
 }
